--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,20 +3,23 @@
           package="com.kotlin.mvvm.boilerplate">
 
     <application
-            android:name=".App"
+            android:name=".BLApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".ui.main.home.MainActivity">
+        <activity android:name=".ui.main.signup.SignupActivity"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".ui.main.home.MainActivity"
+                  android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
