Update UI and custom binding

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,18 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".ui.main.signup.SignupActivity"
-                  android:screenOrientation="portrait">
+        <activity
+                android:name=".ui.main.home.MainActivity"
+                android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.main.home.MainActivity"
-                  android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.main.comment.CommentActivity"
+                android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
